test/typeerrors/Heuristics/AppNotAFunction1.hs
module AppNotAFunction1 where

main = do putStrLn $ "hello" "world"
